fixed spacing

--- a/desktop.css
+++ b/desktop.css
@@ -1,4 +1,6 @@
-html { height: 100%; }
+html { 
+	height: 100%; 
+}
 
 body {
 	background: #FFFFFF;
